<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".vistas.loginActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/Acceso"
        android:textColor="@color/color_texto"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_usuario_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="215dp"
        android:layout_marginEnd="104dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/color_texto"
        android:textColorHint="@color/color_texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/edt_password_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="102dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/color_texto"
        android:textColorHint="@color/color_texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_usuario_login" />

    <Button
        android:id="@+id/btn_iniciar_sesion"
        android:layout_width="69dp"
        android:layout_height="60dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="14dp"
        android:backgroundTint="@color/color_botones"
        android:onClick="iniciar_sesion_login"
        android:text="->"
        android:textColor="#34e891"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btn_deLogin_aRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/color_botones"
        android:onClick="login_A_registro"
        android:text="@string/Registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ProgressBar
        android:id="@+id/pb_ejecutando"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="182dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="181dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password_login" />

</androidx.constraintlayout.widget.ConstraintLayout>