<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".vistas.mostrar_Datos_Activity">

    <TextView
        android:id="@+id/textView23"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/termica"
        android:textColor="@color/color_texto"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/nieve"
        android:textColor="@color/color_texto"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/txt_nieve"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/color_texto"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sens_termica" />

    <TextView
        android:id="@+id/txt_sens_termica"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/color_texto"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_humedad" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/humedad"
        android:textColor="@color/color_texto"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/txt_humedad"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/color_texto"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_viento" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/viento"
        android:textColor="@color/color_texto"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/txt_viento"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/color_texto"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cielo" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/cielo"
        android:textColor="@color/color_texto"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/txt_cielo"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/color_texto"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_precipitacion" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/precip"
        android:textColor="@color/color_texto"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/txt_precipitacion"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/color_texto"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_temp_minima" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/tmin"
        android:textColor="@color/color_texto"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/txt_temp_minima"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/color_texto"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_temp_maxima" />

    <TextView
        android:id="@+id/txt_temp_maxima"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="35dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/color_texto"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="130dp"
        android:gravity="center"
        android:text="@string/tmax"
        android:textColor="@color/color_texto"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_mostrar_datos_municipio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="153dp"
        android:text="TextView"
        android:textColor="@color/color_texto"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>